无名管道，没有完成， 有个疑问，在fork之前，创建管道，这个管道在fork之后是怎么变化的？ 创建的管道，内存分布是怎么样的？
Signed-off-by: kobey <347511974@qq.com>

--- a/03th_Interprocess_communication/README
+++ b/03th_Interprocess_communication/README
@@ -1,3 +1,31 @@
 #参考的在线资料https://www.bilibili.com/video/BV1tJ41117ty
 #别人基于上面资料做的总结https://blog.csdn.net/wenwen111111/category_6687256.html
 
+
+概述：
+
+进程间通讯
+
+			进程A				进程B
+			  |				  |
+	————————————————————————————————————————————————————————————————————————
+	内核空间
+
+				口口口口口口
+				（通讯媒介）
+			媒介的实现方式不同，划分为不同的进程间通讯方式
+
+	————————————————————————————————————————————————————————————————————————
+
+	
+线程间通讯
+			线程A				线程B
+			  |				  |
+	————————————————————————————————————————————————————————————————————————
+	进程的共享区域
+
+			比如：全局变量，static数据等
+	————————————————————————————————————————————————————————————————————————
+
+
+
