进程间通讯——socket 1，简单理解TCP/IP 2，TCP/UDP的通信过程和结束过程 3，socket->connect->accept->bind->listen等API的描述 【BUG】 抓包没有处理
Signed-off-by: kobey <347511974@qq.com>

--- a/03th_Interprocess_communication/README
+++ b/03th_Interprocess_communication/README
@@ -29,3 +29,20 @@
 
 
 
+
+
+
+实际上，进程间通讯涉及到非常多的方式（线程间通讯也属于进程间的一类）
+
+消息传递（管道、FIFO、消息队列）
+同步（互斥量、条件变量、读写锁、文件和写记录锁、信号量）
+共享内存（匿名的和具名的）
+远程过程调用（Solaris门和Sun RPC）
+binder
+等等。。。
+
+
+
+
+
+
