--- a/03th_Interprocess_communication/README
+++ b/03th_Interprocess_communication/README
@@ -1,5 +1,6 @@
-#参考的在线资料https://www.bilibili.com/video/BV1tJ41117ty
-#别人基于上面资料做的总结https://blog.csdn.net/wenwen111111/category_6687256.html
+可参考资料
+#在线资料https://www.bilibili.com/video/BV1tJ41117ty
+#别人的一些总结https://blog.csdn.net/wenwen111111/category_6687256.html
 
 
 概述：
